--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.10"
 selenium = "^4.21.0"
 beautifulsoup4 = "^4.12.3"
+webdriver-manager = "^4.0.1"
+sqlalchemy = "^2.0.30"
+sqlalchemy-utils = "^0.41.2"
 
 
 [build-system]
